# ChangeUp

./: .gitignore  .gitmodules  README.md
.github/workflows/: Dockerfile  build.yml  code-check.yml  robot-code-ci.yml  ros-noetic-build.yml  ros.properties.json  ros.yml  v5-hal-unit-test.yml  v5-hal_test.yml  v5-hal_test.yml.bak
docker/: Dockerfile
paths/: programming-skills_06-25_03-00AM.json  programming-skills_06-26_03-00AM.json
scripts/: actions-entrypoint.sh  build_script.ps1  compute-startup.sh  devInstallScript.sh  run_docker.ps1  ubuntuSetup.sh
src/V5HAL/: CMakeLists.txt  README.md  build.sh  package.xml
src/V5HAL/include/: NodeManager.h  constants.h
src/V5HAL/include/handlerNodes/: HW_IntakeHandler.h
src/V5HAL/include/inputNodes/: AutonReaderNode.h  ControllerNode.h  FlywheelSensorNode.h  GameStateNode.h  LeftDriveSensorNode.h  RightDriveSensorNode.h  controllerNode.h  gameStateNode.h  imuNode.h  leftDriveSensorNode.h  rightDriveSensorNode.h
src/V5HAL/include/ros_lib/: V5Hardware.h  V5Publisher.h
src/V5HAL/include/ros_lib/actionlib/: TestAction.h  TestActionFeedback.h  TestActionGoal.h  TestActionResult.h  TestFeedback.h  TestGoal.h  TestRequestAction.h  TestRequestActionFeedback.h  TestRequestActionGoal.h  TestRequestActionResult.h  TestRequestFeedback.h  TestRequestGoal.h  TestRequestResult.h  TestResult.h  TwoIntsAction.h  TwoIntsActionFeedback.h  TwoIntsActionGoal.h  TwoIntsActionResult.h  TwoIntsFeedback.h  TwoIntsGoal.h  TwoIntsResult.h
src/V5HAL/include/ros_lib/actionlib_msgs/: GoalID.h  GoalStatus.h  GoalStatusArray.h
src/V5HAL/include/ros_lib/actionlib_tutorials/: AveragingAction.h  AveragingActionFeedback.h  AveragingActionGoal.h  (+11 more)
src/V5HAL/message-definitions/: V5MotorSensor.msg
src/V5HAL/msg/: ADIEncoder_Data.msg  ADIUltrasonic_Data.msg  ProsTime_Data.msg  V5Controller_Status.msg  V5RotationSensor_Data.msg  testmessage.msg
src/V5HAL/src/: NodeManager.cpp  helloworld.cpp  main.cpp
src/V5HAL/src/handlerNodes/: HW_IntakeHandler.cpp
src/V5HAL/src/inputNodes/: AutonReaderNode.cpp  FlywheelSensorNode.cpp  controllerNode.cpp  imuNode.cpp  leftDriveSensorNode.cpp  rightDriveSensorNode.cpp
src/adaptive_pursuit_controller/: CMakeLists.txt  package.xml
src/adaptive_pursuit_controller/include/adaptive_pursuit_controller/: AdaptivePursuit.h  Logger.h  Path.h  PathManager.h  Trans2d.h  greeter.hpp
src/adaptive_pursuit_controller/src/Math/: Pose.cpp
src/adaptive_pursuit_controller/src/adaptive_pursuit_controller/: AdaptivePursuit.cpp  Logger.cpp  Path.cpp  Position2d.cpp  TankOdometry.cpp
src/adaptive_pursuit_controller/test/: test_AdaptivePurePursuitController.cpp  test_Path.cpp  test_PathSegment.cpp  test_TankOdometry.cpp
src/adaptive_pursuit_controller/test/testPaths/: simplePath.h  simplePath.json
src/change_up_driver_control/: CMakeLists.txt  package.xml
src/change_up_driver_control/launch/: 15_inch_robot.launch
src/change_up_driver_control/src/: change_up_driver_control_node.cpp  field_oriented_control_node.cpp  zero_swerve_pot_node.cpp
src/navx_publisher/: CMakeLists.txt  navx_publisher.launch
src/navx_publisher/src/: navx_publisher.cpp
src/odometry/: CMakeLists.txt  package.xml
src/odometry/include/odometry/: FollowerOdometry.h  Odometry.h  TankOdometry.h
src/odometry/src/odometry/: Odometry.cpp  TankOdometry.cpp
src/path_reader/: CMakeLists.txt  package.xml
src/path_reader/msg/: Auton.msg  Path.msg  Waypoint.msg
src/pid_class/include/: PID.h
src/pid_class/src/: PID.cpp
src/swerve_controller/: CMakeLists.txt  package.xml
src/swerve_controller/include/swerve_controller/: SwerveController.h  SwerveModule.h
src/swerve_controller/src/: SwerveModule.cpp  swerve_controller_node.cpp
src/swerve_controller/src/swerve_controller/: SwerveController.cpp  SwerveModule.cpp
src/swerve_controller/test/: test_SwerveController.cpp  test_SwerveModule.cpp
src/swerve_controller_auton/: CMakeLists.txt  package.xml
src/swerve_controller_auton/include/swerve_controller_auton/: swerve_auton_controller_node.h
src/swerve_controller_auton/src/: swerve_auton_controller_node.cpp
src/swerve_controller_auton/test/: swerve_auton_controller_test.cpp
src/v5_hal/: CMakeLists.txt  build.sh  package.xml
src/v5_hal/action/: MoveMotorVoltage.action  Test.action
src/v5_hal/firmware/: CMakeLists.txt  fixIncludes.sh  project.pros
src/v5_hal/firmware/include/: Auton.h  DriverControlNode.h  MotorNode.h  NodeManager.h  ProgrammingSkillsAuton.h  SwerveController.h  SwerveModule.h  Timer.h  main.h
src/v5_hal/firmware/src/: Auton.cpp  DriverControlNode.cpp  MotorNode.cpp  NodeManager.cpp  ProgrammingSkillsAuton.cpp  SwerveController.cpp  SwerveModule.cpp  Timer.cpp  main.cpp  time.cpp
src/v5_hal/include/: main.h
src/v5_hal/include/inputNodes/: FlywheelSensorNode.h  IMUNode.h
src/v5_hal/msg/: ADIGyro.msg  CompetitionStatus.msg  MoveMotorVoltageCmd.msg  V5Battery.msg  V5Controller.msg  V5Controller_Data.msg  V5InertialSensor_Data.msg  V5Motor.msg  V5Motor_Data.msg  V5Motor_Status.msg
src/v5_hal/src/: MotorNode.cpp
src/v5_hal/src/handlerNodes/: HW_ChassisHandler.cpp  HW_FlywheelHandler.cpp
src/v5_hal/src/inputNodes/: GameStateNode.cpp
src/v5_hal/test/pathing/: test_PathPoint.cpp
src/v5_hal/test/swerve/: test_SwerveModule.cpp
startup/: start-ros.sh
(+614 files in other folders)
